--- a/onlinequiz/Dockerfile
+++ b/onlinequiz/Dockerfile
@@ -1,10 +1,15 @@
-#Tells Docker to use the official python 3 image from dockerhub as a base image
 FROM python:3.7
-# Sets an environmental variable that ensures output from python is sent straight to the terminal without buffering it first
-ENV PYTHONUNBUFFERED 1
-# Sets the container's working directory to /app
-WORKDIR /app
-# Copies all files from our local project into the container
-ADD ./app
-# runs the pip install command for all packages listed in the requirements.txt file
+
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+        sqlite3 \
+    && rm -rf /var/lib/apt/lists/*
+
+WORKDIR /usr/src/app
+COPY requirements.txt ./
 RUN pip install -r requirements.txt
+
+COPY manage.py usr/src/app/
+
+EXPOSE 8080
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8080"]
