--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,22 @@
-version: '3.8'
-services:
-   web:
-       build: .
-       command: python manage.py runserver localhost:8080
-       ports:
-           - 8080:8080
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: quizzo
+  labels:
+    app: quizzo
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: quizzo
+  template:
+    metadata:
+      labels:
+        app: quizzo
+    spec:
+      containers:
+      - name: quizzo
+      image: gcr.io/model-framing-308812/quizzo@sha256:db17e4945ea74bb28f7e2d0c4b195b20538dd76167d6a9ae5577e4bb57e92fd6
+      imagePullPolicy: Always
+      ports:
+        - containerPort: 8001
