--- a/deploy.yaml
+++ b/deploy.yaml
@@ -22,7 +22,7 @@ spec:
       containers:
       - image:  gcr.io/model-framing-308812/quizzo:v1
         imagePullPolicy: Always
-        name:  my-name
+        name:  my-names
         command: [ "/bin/bash", "-ec"]
         args: [ date; sleep 20; echo 'Hello from the Kubernetes cluster'; sleep 1; while true; do sleep 10; done;]
         resources:
